[gd_scene load_steps=2 format=3 uid="uid://61xv4ehwv240"]

[ext_resource type="Script" path="res://entities/player/console/console.gd" id="1_545tf"]

[node name="CommandLine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_545tf")

[node name="ConsoleWindow" type="Control" parent="."]
anchors_preset = 0
offset_right = 400.0
offset_bottom = 256.0

[node name="panel" type="Panel" parent="ConsoleWindow"]
modulate = Color(0.6, 0.627451, 0.615686, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="lineEdit" type="LineEdit" parent="ConsoleWindow"]
layout_mode = 0
offset_left = 8.0
offset_top = 224.0
offset_right = 392.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 8
placeholder_text = "Input command"
virtual_keyboard_enabled = false
caret_blink = true
caret_blink_interval = 1.0

[node name="label" type="Label" parent="ConsoleWindow"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 17.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 14
text = "Command Line"
horizontal_alignment = 1
vertical_alignment = 1

[node name="panel" type="Panel" parent="ConsoleWindow/label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="richTextLabel" type="RichTextLabel" parent="ConsoleWindow"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 392.0
offset_bottom = 216.0
theme_override_font_sizes/normal_font_size = 8
scroll_following = true

[node name="panel" type="Panel" parent="ConsoleWindow/richTextLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="text_submitted" from="ConsoleWindow/lineEdit" to="." method="_on_line_edit_text_submitted"]
